--- a/public/style.css
+++ b/public/style.css
@@ -539,10 +539,12 @@ img {
   position: fixed;
   z-index: 2000;
   left: 0; top: 0; right: 0; bottom: 0;
-  width: 100vw; height: 100vh;
+  width: 95vw;
+  height: 100vh;
   background: rgba(0,0,0,0.25);
   justify-content: center;
   align-items: center;
+  max-width: 700px;
 }
 .img-modal-content {
   background: #fff;
